<resources>
    <string name="app_name">GoTravel</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Intro screen -->
    <string name="intro_title">GoTravel</string>
    <string name="intro_quote">Limits are for those who need them</string>

    <!-- Navigation bar -->
    <string name="menu_faq">FAQ</string>
    <string name="menu_saved_trips">Saved</string>
    <string name="menu_home">Home</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_my_profile">My profile</string>

    <!-- Home -->
    <string name="home_log_in"><font color="#6cb7d7"><u>LOG IN</u></font> ANY TIME YOU WANT</string>
    <string name="home_title">Let\'s Explore</string>
    <string name="home_search_hint">Where do you want to go?</string>
    <string name="home_sort_by">Sort by:</string>

    <!-- Trip details -->
    <string name="trip_details_see_trip_plan">See trip plan</string>
    <string name="trip_details_read_reviews">Read reviews</string>
    <string name="trip_details_contact_us">Contact us</string>
    <string name="trip_details_save_trip">Save trip</string>
    <string name="trip_details_price">Price: $%1$s</string>
    <string name="trip_details_trip_information">Short info about trip</string>
    <string name="trip_details_days">days</string>
    <string name="trip_details_button_text">Book now</string>
    <string name="trip_details_login_confirm">Login</string>
    <string name="trip_details_login_cancel">Cancel</string>

    <!-- See trip plan -->
    <string name="see_trip_plan_toolbar_title">Prepare for the activity</string>

    <!-- Read reviews -->
    <string name="read_reviews_toolbar_title">Let\'s start talking</string>
    <string name="read_reviews_likes">LIKES</string>
    <string name="read_reviews_comments">COMMENTS</string>
    <string name="read_reviews_comment_hint">Add a comment</string>
    <string name="read_reviews_post_comment">Post</string>
    <string name="read_reviews_subtitle">WE APPRECIATE YOUR FEEDBACK</string>
    <string name="read_reviews_leave_a_comment">Leave us a comment</string>

    <!-- Contact us -->
    <string name="contact_us_toolbar_title">Do you have any questions ?</string>
    <string name="contact_us_subtitle">We would love to hear from you</string>
    <string name="contact_us_hint">Feel free to ask us anything</string>
    <string name="contact_us_submit">Submit</string>
    <string name="contact_us_address">ADDRESS</string>
    <string name="contact_us_phone">PHONE</string>

    <!--About us -->
    <string name="about_us_toolbar_title">About us</string>
    <string name="about_us_subtitle">Let\'s get to know each other</string>
    <string name="about_us_intro_title">Who we are ?</string>
    <string name="about_us_intro">Why choose GoTravel travel agency? Travel arranged by a professional travel agents guarantees that you never travel alone. You benefit from our years of experience and our relationship with suppliers in the travel industry. From getting the best deals and VIP treatment, to having the someone to turn to when the unexpected occurs, a travel agent is a traveler’s best resource.</string>
    <string name="about_us_unique_title">What makes us unique?</string>
    <string name="about_us_unique">Many agencies force you to deal with multiple people throughout the booking process, making it disjointed and impersonal. At GoTravel you will deal with the same travel expert from the moment of initial contact until you are safely back at home. Unlike many other agencies who do their business solely online or even from abroad, we still keep regular office hours and are delighted when with planned visits or drop-ins to our West Roxbury office.</string>

    <!-- My profile -->
    <string name="my_profile_toolbar_title">My profile</string>

    <!-- FAQ -->
    <string name="faq_toolbar_title">Frequently asked questions</string>
    <string name="faq_need_help">Need help ?</string>
    <string name="faq_ask_us">Ask us</string>

    <!-- Create account -->
    <string name="create_account_log_in"><u>Already have an account? <b>Log in</b></u></string>
    <string name="create_account_title">CREATE ACCOUNT</string>
    <string name="create_account_subtitle">JOIN US AND GET ALL THE FEATURES</string>
    <string name="create_account_upload_photo">Upload photo</string>
    <string name="create_account_first_name_hint">First name</string>
    <string name="create_account_last_name_hint">Last name</string>
    <string name="create_account_email_hint">Email</string>
    <string name="create_account_password_hint">Password</string>
    <string name="create_account_confirm_password_hint">Confirm password</string>
    <string name="create_account_select_gender">Select gender</string>
    <string name="create_account_select_birth_date">Select birth date</string>
    <string name="create_account_button">Create account</string>

    <!-- Log in -->
    <string name="log_in_title">LOG IN</string>
    <string name="log_in_subtitle">You need to be logged in to book your trip</string>
    <string name="log_in_create_account">Don\'t have an account? <u><b>Sign up</b></u></string>
    <string name="log_in_button">Log in</string>
    <string name="log_in_skip_and_explore"><u>Skip and Explore</u></string>

    <!-- Log out -->
    <string name="log_out_title">Log out</string>
    <string name="log_out_message">Are you sure you want to log out?</string>
    <string name="log_out_yes">YES</string>
    <string name="log_out_no">NO</string>

    <!-- Change password -->
    <string name="change_password_toolbar_title">Change password</string>
    <string name="change_password_old_password">Old password</string>
    <string name="change_password_new_password">New password</string>
    <string name="change_password_retype_password">Retype password</string>
    <string name="change_password_button_text">Change password</string>
    <string name="change_password_success_message">Successfully changed password.</string>
    <string name="change_password_error_message">Error has occurred.</string>

    <!-- About me -->
    <string name="about_me_toolbar_title">About me</string>
    <string name="about_me_button_text">Save changes</string>
    <string name="about_me_change_photo">Change photo</string>


    <!-- Message screen -->
    <string name="message_successful_reservation">Your reservation has been confirmed!\nCheck your email for more details.</string>
    <string name="message_title">Thank You\nFor Traveling With Us</string>
    <string name="message_subtitle">We are dedicated to giving you the best experience possible. If you have any questions feel free to get in touch.</string>
    <string name="message_button">Ok</string>

    <!-- Book now -->
    <string name="book_trip_toolbar_title">Book trip</string>
    <string name="book_now_num_of_people_hint">Enter number of people</string>
    <string name="book_now_enter_coupon_code">Enter coupon code</string>
    <string name="book_now_apply">Apply</string>
    <string name="book_now_coupon_code_instruction">Make sure you apply the coupon before you book, and keep in mind that if you cancel a reservation, the coupon can’t be used again.</string>
    <string name="book_now_button_text">Next</string>

    <!--Payment -->
    <string name="payment_toolbar_title">Payment summary</string>
    <string name="payment_card_information">Card information</string>
    <string name="payment_name_on_card">Name on Card <font color="#FF0000">*</font></string>
    <string name="payment_credit_card_number">Credit card number <font color="#FF0000">*</font></string>
    <string name="payment_expires">Expires: <font color="#FF0000">*</font></string>
    <string name="payment_security_code">Security Code <font color="#FF0000">*</font></string>
    <string name="payment_billing_address">Billing Address</string>
    <string name="payment_street_address">Street Address <font color="#FF0000">*</font></string>
    <string name="payment_city">City <font color="#F0000">*</font></string>
    <string name="payment_zip_code">Zip Code <font color="#FF0000">*</font></string>
    <string name="payment_button_text">Complete booking</string>

    <string-array name="SearchFilterOptions">
        <item>Popularity</item>
        <item>Price - Low to High</item>
        <item>Price - High to Low</item>
        <item>Time - Newest</item>
        <item>Time - Oldest</item>
    </string-array>

    <string-array name="GenderOptions">
        <item>Man</item>
        <item>Woman</item>
        <item>Other</item>
    </string-array>

    <string-array name="MonthsOptions">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="YearsOptions">
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
    </string-array>

</resources>